<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/splash_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/str_gestionlibros"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/splash_text_primary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_titulo"
            android:textColor="@color/splash_text_secondary"
            />
        <EditText
            android:id="@+id/man_txttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/primary"
            android:inputType="text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_isbn"
            android:textColor="@color/splash_text_secondary"
            />
        <EditText
            android:id="@+id/man_txtisbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/primary"
            android:inputType="number"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_autor"
            android:textColor="@color/splash_text_secondary"
            />
        <EditText
            android:id="@+id/man_txtauthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/primary"
            android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_anio_publicacion"
            android:textColor="@color/splash_text_secondary"
            />
        <EditText
            android:id="@+id/man_txtpublicationyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/primary"
            android:inputType="number"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_precio"
            android:textColor="@color/splash_text_secondary"
            />
        <EditText
            android:id="@+id/man_txtprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/primary"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_imagenactual"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/splash_text_secondary"/>

        <ImageView
            android:id="@+id/man_editimgpreview"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#E0E0E0"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/man_btneditphoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btncambiarfoto" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/man_btnupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_btnactualizar" />

            <Button
                android:id="@+id/man_btndelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_btnborrar" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>